(library
 (name bearbeer)
 (libraries containers date_time omd fpath tyxml frontmatter_extractor.yaml)
 (preprocess
  (pps ppx_deriving_yaml)))

(rule
 (with-stdout-to
  resources.ml
  (progn
   (echo "let bearneo_css = {|")
   (cat resources/bearneo.css)
   (echo "|}\n")
   (echo "module Icons = struct\n")
   (echo "let github = {|")
   (cat resources/github.icon.svg)
   (echo "|}\n")
   (echo "let telegram = {|")
   (cat resources/telegram.icon.svg)
   (echo "|}\n")
   (echo "end"))))
